feat: get telescope in core

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -34,6 +34,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "\n",
+    "def get_telescope(channel):\n",
+    "    \"\"\"Identify if a channel is in SAT or LAT\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    channel : str\n",
+    "        channel tag, e.g. MFH1\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    telescope : str\n",
+    "        'SAT' or 'LAT'\n",
+    "    \"\"\"\n",
+    "    return channel[-2] + \"AT\""
+   ]
   }
  ],
  "metadata": {
