--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -15,20 +15,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging as log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# export\n",
+    "\n",
+    "import logging as log\n",
+    "\n",
     "import toml\n",
     "import healpy as hp\n",
     "import numpy as np\n",
     "import h5py\n",
-    "from path import Path"
+    "from path import Path\n",
+    "\n",
+    "from s4refsimtool.core import get_telescope"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load and scale the atmosphere maps\n",
+    "\n",
+    "* We have 8 independent realizations\n",
+    "* They scale with the number of telescopes, i.e. it doesn't make any difference if there are 1 or 3 channels in the same telescope, they do not help beat the atmosphere\n",
+    "* They were simulated for 10 days at 100% efficiency at Chile, 46.29% (SAT) and 37.23% (LAT) at Pole"
    ]
   },
   {
@@ -37,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from s4refsimtool.core import get_telescope"
+    "simulations_observing_efficiency = dict(pole=dict(SAT=46.29/100, LAT=37.23/100), chile=dict())"
    ]
   },
   {
@@ -122,6 +130,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute telescope/years for the reference design"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -143,7 +158,8 @@
     "            if telescope == \"SAT\":\n",
     "                assert telescope_years == 14, \"2 SAT telescopes each band\"\n",
     "            else:\n",
-    "                assert telescope_years == 7, \"1 LAT with all 4 bands\"            "
+    "                assert telescope_years == 7, \"1 LAT with all 4 bands\" \n",
+    "    print(30 * \"=\")"
    ]
   },
   {
@@ -154,7 +170,7 @@
    "source": [
     "# export\n",
     "\n",
-    "def load_atmosphere(config, site, channel):\n",
+    "def load_atmosphere(config, site, channel, realization=0):\n",
     "    \"\"\"Load foreground maps for a channel\n",
     "    \n",
     "    Parameters\n",
@@ -166,6 +182,8 @@
     "        'Pole' or 'Chile', case doesn't matter\n",
     "    channel : str\n",
     "        Channel tag, e.g. 'MFHS1'\n",
+    "    realization : int\n",
+    "        Choose one of the available 8 realizations\n",
     "        \n",
     "    Returns\n",
     "    -------\n",
@@ -180,9 +198,18 @@
     "        (0,1,2), dtype=np.float32, verbose=False)\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
-    "    atmosphere_map *= 10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
-    "    atmosphere_map *= get_telecope_years(config[\"telescopes\"], site, channel)\n",
+    "    atmosphere_map *= np.sqrt(10) / np.sqrt(365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "    # pole sims have lower efficiency\n",
+    "    atmosphere_map *= np.sqrt(simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
+    "    atmosphere_map /= np.sqrt(get_telecope_years(config[\"telescopes\"], site, channel))\n",
     "    return atmosphere_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run on a channel and plot results"
    ]
   },
   {
@@ -201,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_map = load_atmosphere(config, site, channel)"
+    "output_map = load_atmosphere(config, site, channel, realization=1)"
    ]
   },
   {
@@ -210,7 +237,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmax(output_map) < 1e-2 and np.nanmax(output_map) > 1e-3, \\\n",
+    "np.nanmax(output_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert np.nanmax(output_map) < 1e-4 and np.nanmax(output_map) > 1e-6, \\\n",
     "    \"Amplitude check failed\""
    ]
   },
@@ -220,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmin(output_map) > -1e-2 and np.nanmin(output_map) < 1e-3, \\\n",
+    "assert np.nanmin(output_map) > -1e-4 and np.nanmin(output_map) < 1e-6, \\\n",
     "    \"Amplitude check failed\""
    ]
   },
@@ -239,7 +275,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[0], min=-1e-3, max=1e-3, unit=\"K\", title=\"Atmosphere\")"
+    "hp.mollview(output_map[0], min=-1e-5, max=1e-5, unit=\"K\", title=\"Atmosphere I\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are no systematics in the half-wave plate or bandpass mismatch, so almost all the atmosphere signal is rejected in polarization."
    ]
   },
   {
@@ -248,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[1], min=-1e-7, max=1e-7, unit=\"K\", title=\"Atmosphere Q\")"
+    "hp.mollview(output_map[1], min=-1e-9, max=1e-9, unit=\"K\", title=\"Atmosphere Q\")"
    ]
   },
   {
@@ -257,8 +300,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[2], min=-1e-7, max=1e-7, unit=\"K\", title=\"Atmosphere U\")"
+    "hp.mollview(output_map[2], min=-1e-9, max=1e-9, unit=\"K\", title=\"Atmosphere U\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
