first draft of all notebooks

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# s4refsimtool\n",
     "\n",
     "> API details."
    ]
@@ -33,7 +33,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export\n",
+    "\n",
+    "base_folder = \"/global/cscratch1/sd/keskital/s4sim/reference_tool/out/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "simulations_observing_efficiency = dict(pole=dict(SAT=46.29/100, LAT=37.23/100), chile=dict())"
+   ]
   },
   {
    "cell_type": "code",
