--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Atmosphere\n",
-    "> Load and scale the maps of the noise from the atmosphere\n",
+    "# Noise\n",
+    "> Load and scale 1/f and white noise simulations\n",
     "- toc: True\n",
     "\n",
-    "* We have 8 independent realizations\n",
-    "* They scale with the number of telescopes, i.e. it doesn't make any difference if there are 1 or 3 channels in the same telescope, they do not help beat the atmosphere\n",
-    "* They were simulated for 10 days at 100% efficiency at Chile, 46.29% (SAT) and 37.23% (LAT) at Pole"
+    "* They include white and 1/f noise\n",
+    "* Simulated for 10 days, see note about efficiency for atmosphere\n",
+    "* also have a thinning factor on the number of channels"
    ]
   },
   {
@@ -19,7 +19,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp atmosphere"
+    "# default_exp noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging as log"
    ]
   },
   {
@@ -30,8 +39,6 @@
    "source": [
     "# export\n",
     "\n",
-    "import logging as log\n",
-    "\n",
     "import toml\n",
     "import healpy as hp\n",
     "import numpy as np\n",
@@ -39,6 +46,73 @@
     "from path import Path\n",
     "\n",
     "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "thinfp_string = \"\"\"telescope  band   thinfp\n",
+    "LAT        HFL      8\n",
+    "LAT        MFL      8\n",
+    "LAT        LFL      1\n",
+    "LAT        ULFL     1\n",
+    "SAT        HFS      8\n",
+    "SAT        MFHS     4\n",
+    "SAT        MFLS     4\n",
+    "SAT        LFS      1\n",
+    "\"\"\"\n",
+    "\n",
+    "from astropy.io import ascii\n",
+    "thinfp_table = ascii.read(thinfp_string)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from s4refsimtool.core import get_telescope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "def get_thinfp(channel):\n",
+    "    \"\"\"Get the focal plane thinning factor for noise simulations\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    channel : str\n",
+    "        CMB-S4 channel tag e.g. HFL2\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    thinfp : int\n",
+    "        thinning factor\n",
+    "    \"\"\"\n",
+    "    return (thinfp_table[thinfp_table[\"band\"]==channel[:-1]])[\"thinfp\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert get_thinfp(\"ULFL1\") == 1\n",
+    "assert get_thinfp(\"HFL2\") == 8\n",
+    "assert get_thinfp(\"MFLS1\") == 4"
    ]
   },
   {
@@ -67,8 +141,8 @@
    "source": [
     "# export\n",
     "\n",
-    "def get_telecope_years(config_telescopes, site, channel):\n",
-    "    \"\"\"Compute the number of telescope/years in the CMB-S4 configuration\n",
+    "def get_tube_years(config_telescopes, site, channel):\n",
+    "    \"\"\"Compute the number of tube/years in the CMB-S4 configuration\n",
     "    \n",
     "    config_telescopes : dict\n",
     "        CMB-S4 telescopes configuration,\n",
@@ -78,12 +152,12 @@
     "    channel : str\n",
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
-    "    telescope_years = 0\n",
+    "    tube_years = 0\n",
     "    for tube, bands in config_telescopes[get_telescope(channel)].items():\n",
     "        if bands[\"site\"].lower() == site.lower():\n",
-    "            has_band = bands.get(channel[:-1], 0) > 0\n",
-    "            telescope_years += has_band * bands.get(\"years\", config[\"experiment\"][\"total_experiment_length_years\"])\n",
-    "    return telescope_years"
+    "            num_tubes = bands.get(channel[:-1], 0)\n",
+    "            tube_years += num_tubes * bands.get(\"years\", config[\"experiment\"][\"total_experiment_length_years\"])\n",
+    "    return tube_years"
    ]
   },
   {
@@ -105,13 +179,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compute telescope/years for the reference design"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -119,22 +186,26 @@
    "source": [
     "for site in [\"Pole\", \"Chile\"]:\n",
     "    for channel in s4.keys():\n",
-    "        telescope_years = get_telecope_years(config[\"telescopes\"], site, channel)\n",
-    "        print(site, channel, telescope_years)\n",
+    "        tube_years = get_tube_years(config[\"telescopes\"], site, channel)\n",
+    "        print(site, channel, tube_years)\n",
     "        telescope = get_telescope(channel)\n",
     "        if site == \"Chile\":\n",
     "            if telescope == \"SAT\":\n",
-    "                assert telescope_years == 0, \"All SAT at Pole\"\n",
+    "                assert tube_years == 0, \"All SAT at Pole\"\n",
     "            elif channel.startswith(\"ULFL\"):\n",
-    "                assert telescope_years == 0, \"No ULFL in Chile\"              \n",
+    "                assert tube_years == 0, \"No ULFL in Chile\"              \n",
     "            else:\n",
-    "                assert telescope_years == 14, \"2 LAT each band\"\n",
+    "                if channel.startswith(\"MFL\"):\n",
+    "                    assert tube_years == 24*7, \"12+12 MFL channels\"\n",
     "        if site == \"Pole\":\n",
     "            if telescope == \"SAT\":\n",
-    "                assert telescope_years == 14, \"2 SAT telescopes each band\"\n",
+    "                if channel.startswith(\"LFS\"):\n",
+    "                    assert tube_years == 2*7, \"2 LFS Tubes\"\n",
+    "                elif channel.startswith(\"MF\"):\n",
+    "                    assert tube_years == 6*7, \"2 LFS Tubes\"                  \n",
     "            else:\n",
-    "                assert telescope_years == 7, \"1 LAT with all 4 bands\" \n",
-    "    print(30 * \"=\")"
+    "                if channel.startswith(\"HFL\"):\n",
+    "                    assert tube_years == 4*7, \"4 HFL tubes\"            "
    ]
   },
   {
@@ -145,8 +216,8 @@
    "source": [
     "# export\n",
     "\n",
-    "def load_atmosphere(config, site, channel, realization=0):\n",
-    "    \"\"\"Load foreground maps for a channel\n",
+    "def load_noise(config, site, channel, realization=0):\n",
+    "    \"\"\"Load noise maps for a channel\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -166,25 +237,27 @@
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
-    "    atmosphere_map = hp.read_map(\n",
-    "            Path(base_folder) / f\"{realization:08d}\"/ f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
+    "    nside = 512 if telescope == \"SAT\" else 4096\n",
+    "    npix = hp.nside2npix(nside)\n",
+    "    output_map = hp.read_map(\n",
+    "            Path(base_folder) / f\"{realization:08d}\" / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
     "        (0,1,2), dtype=np.float32, verbose=False)\n",
-    "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
+    "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
-    "    atmosphere_map *= np.sqrt(10) / np.sqrt(365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "    output_map *= 10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "    output_map *= get_tube_years(config[\"telescopes\"], site, channel)\n",
     "    # pole sims have lower efficiency\n",
-    "    atmosphere_map *= np.sqrt(simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
-    "    atmosphere_map /= np.sqrt(get_telecope_years(config[\"telescopes\"], site, channel))\n",
-    "    return atmosphere_map"
+    "    output_map *= np.sqrt(simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
+    "    # focal plane thinning factor of TOD simulations\n",
+    "    output_map /= np.sqrt(get_thinfp(channel))\n",
+    "    return output_map"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run on a channel and plot results\n",
-    "\n",
-    "Available atmosphere maps"
+    "## Available input maps"
    ]
   },
   {
@@ -193,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = !ls /global/cscratch1/sd/keskital/s4sim/reference_tool/out/00000000/*atmo*"
+    "filenames = !ls /global/cscratch1/sd/keskital/s4sim/reference_tool/out/00000000/*noise*bmap*"
    ]
   },
   {
@@ -223,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_map = load_atmosphere(config, site, channel, realization=0)"
+    "output_map = load_noise(config, site, channel, realization=0)"
    ]
   },
   {
@@ -232,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.nanmax(output_map)"
+    "np.nanmin(output_map), np.nanmax(output_map)"
    ]
   },
   {
@@ -241,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmax(output_map) < 1e-3 and np.nanmax(output_map) > 1e-5, \\\n",
+    "assert np.nanmax(output_map) < 1e-2 and np.nanmax(output_map) > 1e-3, \\\n",
     "    \"Amplitude check failed\""
    ]
   },
@@ -251,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmin(output_map) > -1e-4 and np.nanmin(output_map) < 1e-6, \\\n",
+    "assert np.nanmin(output_map) > -1e-2 and np.nanmin(output_map) < 1e-3, \\\n",
     "    \"Amplitude check failed\""
    ]
   },
@@ -270,14 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[0], min=-1e-5, max=1e-5, unit=\"K\", title=\"Atmosphere I\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are no systematics in the half-wave plate or bandpass mismatch, so almost all the atmosphere signal is rejected in polarization."
+    "hp.mollview(output_map[0], min=-1e-4, max=1e-4, unit=\"K\", title=\"Noise I\")"
    ]
   },
   {
@@ -286,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[1], min=-1e-9, max=1e-9, unit=\"K\", title=\"Atmosphere Q\")"
+    "hp.mollview(output_map[1], min=-1e-4, max=1e-4, unit=\"K\", title=\"Noise Q\")"
    ]
   },
   {
@@ -295,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[2], min=-1e-9, max=1e-9, unit=\"K\", title=\"Atmosphere U\")"
+    "hp.mollview(output_map[2], min=-1e-4, max=1e-4, unit=\"K\", title=\"Noise U\")"
    ]
   },
   {
