--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -10,14 +10,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import toml\n",
-    "import healpy as hp\n",
-    "import numpy as np"
+    "# Foregrounds\n",
+    "> Load extragalactic, galactic and CMB maps\n",
+    "- toc: True"
    ]
   },
   {
@@ -26,7 +24,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from s4refsimtool.core import get_telescope"
+    "# export\n",
+    "\n",
+    "import toml\n",
+    "import healpy as hp\n",
+    "import numpy as np\n",
+    "\n",
+    "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
    ]
   },
   {
@@ -36,24 +40,6 @@
    "outputs": [],
    "source": [
     "config = toml.load(\"s4_reference_design.toml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_folder = \"/global/cscratch1/sd/keskital/s4sim/reference_tool/out/00000000\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!du -sh /global/cscratch1/sd/keskital/s4sim/reference_tool/out/00000000/"
    ]
   },
   {
@@ -99,15 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import logging as log"
    ]
   },
@@ -118,15 +95,6 @@
    "outputs": [],
    "source": [
     "log.basicConfig(level=log.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"pole_cmb-tensors_SAT_LFS1_filtered_telescope_all_time_all_bmap.fits\""
    ]
   },
   {
@@ -191,6 +159,7 @@
     "    nside = 512 if telescope == \"SAT\" else 4096\n",
     "    npix = hp.nside2npix(nside)\n",
     "    output_map = np.zeros((3, npix), dtype=np.float32)\n",
+    "    realization = 0 # foregrounds are deterministic\n",
     "    for emission, weight in config_sky_emission.items():\n",
     "        if weight == 0:\n",
     "            log.info(\"Skip %s\", emission)\n",
@@ -198,7 +167,7 @@
     "        log.info(\"Processing %s\", emission)\n",
     "\n",
     "        emission_map = hp.read_map(\n",
-    "            Path(base_folder) / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{ch}_filtered_telescope_all_time_all_bmap.fits\",\n",
+    "            Path(base_folder) / f\"{realization:08d}\" / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{ch}_filtered_telescope_all_time_all_bmap.fits\",\n",
     "        (0,1,2), verbose=False)\n",
     "        emission_map[emission_map == hp.UNSEEN] = np.nan\n",
     "        if emission == \"CMB_tensor_to_scalar_ratio\":\n",
