docs: export function source

--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exports\n",
     "\n",
     "def load_sky_emission(config_sky_emission, site, channel):\n",
     "    \"\"\"Load foreground maps for a channel\n",
