--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exports\n",
     "\n",
     "def get_telecope_years(config_telescopes, site, channel):\n",
     "    \"\"\"Compute the number of telescope/years in the CMB-S4 configuration\n",
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exports\n",
     "\n",
     "def load_atmosphere(config, site, channel, realization=0):\n",
     "    \"\"\"Load foreground maps for a channel\n",
