--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exports\n",
     "\n",
     "def get_thinfp(channel):\n",
     "    \"\"\"Get the focal plane thinning factor for noise simulations\n",
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exports\n",
     "\n",
     "def get_tube_years(config_telescopes, site, channel):\n",
     "    \"\"\"Compute the number of tube/years in the CMB-S4 configuration\n",
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exports\n",
     "\n",
     "def load_noise(config, site, channel, realization=0):\n",
     "    \"\"\"Load noise maps for a channel\n",
