run black on notebooks

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -47,7 +47,9 @@
    "source": [
     "# export\n",
     "\n",
-    "simulations_observing_efficiency = dict(pole=dict(SAT=46.29/100, LAT=37.23/100), chile=dict())"
+    "simulations_observing_efficiency = dict(\n",
+    "    pole=dict(SAT=46.29 / 100, LAT=37.23 / 100), chile=dict()\n",
+    ")"
    ]
   },
   {
@@ -58,14 +60,15 @@
    "source": [
     "#export\n",
     "\n",
+    "\n",
     "def get_telescope(channel):\n",
     "    \"\"\"Identify if a channel is in SAT or LAT\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    channel : str\n",
     "        channel tag, e.g. MFH1\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    telescope : str\n",
