--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -135,9 +135,10 @@
    "source": [
     "# exports\n",
     "\n",
+    "\n",
     "def load_sky_emission(config_sky_emission, site, channel):\n",
     "    \"\"\"Load foreground maps for a channel\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    config_sky_emission : dict\n",
@@ -149,7 +150,7 @@
     "        'Pole' or 'Chile', case doesn't matter\n",
     "    channel : str\n",
     "        Channel tag, e.g. 'MFHS1'\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    output_map : numpy array\n",
@@ -159,7 +160,7 @@
     "    nside = 512 if telescope == \"SAT\" else 4096\n",
     "    npix = hp.nside2npix(nside)\n",
     "    output_map = np.zeros((3, npix), dtype=np.float32)\n",
-    "    realization = 0 # foregrounds are deterministic\n",
+    "    realization = 0  # foregrounds are deterministic\n",
     "    for emission, weight in config_sky_emission.items():\n",
     "        if weight == 0:\n",
     "            log.info(\"Skip %s\", emission)\n",
@@ -167,14 +168,18 @@
     "        log.info(\"Processing %s\", emission)\n",
     "\n",
     "        emission_map = hp.read_map(\n",
-    "            Path(base_folder) / f\"{realization:08d}\" / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{ch}_filtered_telescope_all_time_all_bmap.fits\",\n",
-    "        (0,1,2), verbose=False)\n",
+    "            Path(base_folder)\n",
+    "            / f\"{realization:08d}\"\n",
+    "            / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{ch}_filtered_telescope_all_time_all_bmap.fits\",\n",
+    "            (0, 1, 2),\n",
+    "            verbose=False,\n",
+    "        )\n",
     "        emission_map[emission_map == hp.UNSEEN] = np.nan\n",
     "        if emission == \"CMB_tensor_to_scalar_ratio\":\n",
-    "            weight /= 0.01 # r of the input maps\n",
+    "            weight /= 0.01  # r of the input maps\n",
     "        output_map += emission_map * weight\n",
     "\n",
-    "    output_map /= 1e6 # uK -> K\n",
+    "    output_map /= 1e6  # uK -> K\n",
     "    return output_map"
    ]
   },
