--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -67,9 +67,10 @@
    "source": [
     "# exports\n",
     "\n",
+    "\n",
     "def get_telecope_years(config_telescopes, site, channel):\n",
     "    \"\"\"Compute the number of telescope/years in the CMB-S4 configuration\n",
-    "    \n",
+    "\n",
     "    config_telescopes : dict\n",
     "        CMB-S4 telescopes configuration,\n",
     "        generally config[\"telescopes\"] if loaded from a TOML file\n",
@@ -82,7 +83,9 @@
     "    for tube, bands in config_telescopes[get_telescope(channel)].items():\n",
     "        if bands[\"site\"].lower() == site.lower():\n",
     "            has_band = bands.get(channel[:-1], 0) > 0\n",
-    "            telescope_years += has_band * bands.get(\"years\", config[\"experiment\"][\"total_experiment_length_years\"])\n",
+    "            telescope_years += has_band * bands.get(\n",
+    "                \"years\", config[\"experiment\"][\"total_experiment_length_years\"]\n",
+    "            )\n",
     "    return telescope_years"
    ]
   },
@@ -145,9 +148,10 @@
    "source": [
     "# exports\n",
     "\n",
+    "\n",
     "def load_atmosphere(config, site, channel, realization=0):\n",
     "    \"\"\"Load foreground maps for a channel\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    config : dict\n",
@@ -159,7 +163,7 @@
     "        Channel tag, e.g. 'MFHS1'\n",
     "    realization : int\n",
     "        Choose one of the available 8 realizations\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    output_map : numpy array\n",
@@ -167,13 +171,22 @@
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
     "    atmosphere_map = hp.read_map(\n",
-    "            Path(base_folder) / f\"{realization:08d}\"/ f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
-    "        (0,1,2), dtype=np.float32, verbose=False)\n",
+    "        Path(base_folder)\n",
+    "        / f\"{realization:08d}\"\n",
+    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
+    "        (0, 1, 2),\n",
+    "        dtype=np.float32,\n",
+    "        verbose=False,\n",
+    "    )\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
-    "    atmosphere_map *= np.sqrt(10) / np.sqrt(365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "    atmosphere_map *= np.sqrt(10) / np.sqrt(\n",
+    "        365.25 * config[\"experiment\"][\"observing_efficiency\"]\n",
+    "    )\n",
     "    # pole sims have lower efficiency\n",
-    "    atmosphere_map *= np.sqrt(simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
+    "    atmosphere_map *= np.sqrt(\n",
+    "        simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "    )\n",
     "    atmosphere_map /= np.sqrt(get_telecope_years(config[\"telescopes\"], site, channel))\n",
     "    return atmosphere_map"
    ]
