--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -68,7 +68,8 @@
     "\"\"\"\n",
     "\n",
     "from astropy.io import ascii\n",
-    "thinfp_table = ascii.read(thinfp_string)  "
+    "\n",
+    "thinfp_table = ascii.read(thinfp_string)"
    ]
   },
   {
@@ -88,20 +89,21 @@
    "source": [
     "# exports\n",
     "\n",
+    "\n",
     "def get_thinfp(channel):\n",
     "    \"\"\"Get the focal plane thinning factor for noise simulations\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    channel : str\n",
     "        CMB-S4 channel tag e.g. HFL2\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    thinfp : int\n",
     "        thinning factor\n",
     "    \"\"\"\n",
-    "    return (thinfp_table[thinfp_table[\"band\"]==channel[:-1]])[\"thinfp\"]"
+    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-1]])[\"thinfp\"]"
    ]
   },
   {
@@ -141,9 +143,10 @@
    "source": [
     "# exports\n",
     "\n",
+    "\n",
     "def get_tube_years(config_telescopes, site, channel):\n",
     "    \"\"\"Compute the number of tube/years in the CMB-S4 configuration\n",
-    "    \n",
+    "\n",
     "    config_telescopes : dict\n",
     "        CMB-S4 telescopes configuration,\n",
     "        generally config[\"telescopes\"] if loaded from a TOML file\n",
@@ -156,7 +159,9 @@
     "    for tube, bands in config_telescopes[get_telescope(channel)].items():\n",
     "        if bands[\"site\"].lower() == site.lower():\n",
     "            num_tubes = bands.get(channel[:-1], 0)\n",
-    "            tube_years += num_tubes * bands.get(\"years\", config[\"experiment\"][\"total_experiment_length_years\"])\n",
+    "            tube_years += num_tubes * bands.get(\n",
+    "                \"years\", config[\"experiment\"][\"total_experiment_length_years\"]\n",
+    "            )\n",
     "    return tube_years"
    ]
   },
@@ -216,9 +221,10 @@
    "source": [
     "# exports\n",
     "\n",
+    "\n",
     "def load_noise(config, site, channel, realization=0):\n",
     "    \"\"\"Load noise maps for a channel\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    config : dict\n",
@@ -230,7 +236,7 @@
     "        Channel tag, e.g. 'MFHS1'\n",
     "    realization : int\n",
     "        Choose one of the available 8 realizations\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    output_map : numpy array\n",
@@ -240,14 +246,21 @@
     "    nside = 512 if telescope == \"SAT\" else 4096\n",
     "    npix = hp.nside2npix(nside)\n",
     "    output_map = hp.read_map(\n",
-    "            Path(base_folder) / f\"{realization:08d}\" / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
-    "        (0,1,2), dtype=np.float32, verbose=False)\n",
+    "        Path(base_folder)\n",
+    "        / f\"{realization:08d}\"\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
+    "        (0, 1, 2),\n",
+    "        dtype=np.float32,\n",
+    "        verbose=False,\n",
+    "    )\n",
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    output_map *= 10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
     "    output_map *= get_tube_years(config[\"telescopes\"], site, channel)\n",
     "    # pole sims have lower efficiency\n",
-    "    output_map *= np.sqrt(simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
+    "    output_map *= np.sqrt(\n",
+    "        simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "    )\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    output_map /= np.sqrt(get_thinfp(channel))\n",
     "    return output_map"
