feat: parse channel script

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -60,7 +60,6 @@
    "source": [
     "#export\n",
     "\n",
-    "\n",
     "def get_telescope(channel):\n",
     "    \"\"\"Identify if a channel is in SAT or LAT\n",
     "\n",
@@ -76,6 +75,44 @@
     "    \"\"\"\n",
     "    return channel[-2] + \"AT\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "import h5py\n",
+    "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')\n",
+    "\n",
+    "def parse_channels(channels):\n",
+    "    if channels in [\"SAT\", \"LAT\"]:\n",
+    "        channels = [ch for ch in s4.keys() if s4[ch].attrs[\"telescope\"]==channels]\n",
+    "    elif channels in [\"all\", None]:\n",
+    "        channels = s4.keys()\n",
+    "    return [channels] if isinstance(channels, str) else list(channels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert parse_channels(\"LFL1\") == [\"LFL1\"]\n",
+    "assert parse_channels([\"LFL1\"]) == [\"LFL1\"]\n",
+    "assert parse_channels(\"LAT\") == ['HFL1', 'HFL2', 'LFL1', 'LFL2', 'MFL1', 'MFL2', 'ULFL1']\n",
+    "assert parse_channels(\"all\") == list(s4.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
