--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -30,6 +30,9 @@
     "import healpy as hp\n",
     "import numpy as np\n",
     "\n",
+    "from path import Path\n",
+    "import logging as log\n",
+    "\n",
     "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
    ]
   },
@@ -85,15 +88,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging as log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "log.basicConfig(level=log.INFO)"
    ]
   },
@@ -103,21 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emission_naming = dict(\n",
-    "foreground_emission = \"foreground\",\n",
-    "CMB_unlensed = \"cmb-unlensed\",\n",
-    "CMB_lensing_signal = \"cmb-lensing\",\n",
-    "CMB_tensor_to_scalar_ratio = \"cmb-tensors\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from path import Path"
+    "# export\n",
+    "\n",
+    "emission_naming = dict( foreground_emission = \"foreground\", CMB_unlensed = \"cmb-unlensed\", CMB_lensing_signal = \"cmb-lensing\",CMB_tensor_to_scalar_ratio = \"cmb-tensors\",)"
    ]
   },
   {
@@ -156,7 +138,7 @@
     "    output_map : numpy array\n",
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
-    "    telescope = get_telescope(ch)\n",
+    "    telescope = get_telescope(channel)\n",
     "    nside = 512 if telescope == \"SAT\" else 4096\n",
     "    npix = hp.nside2npix(nside)\n",
     "    output_map = np.zeros((3, npix), dtype=np.float32)\n",
