--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -68,19 +68,19 @@
     "# exports\n",
     "\n",
     "\n",
-    "def get_telecope_years(config_telescopes, site, channel):\n",
+    "def get_telecope_years(config, site, channel):\n",
     "    \"\"\"Compute the number of telescope/years in the CMB-S4 configuration\n",
     "\n",
     "    config_telescopes : dict\n",
     "        CMB-S4 telescopes configuration,\n",
-    "        generally config[\"telescopes\"] if loaded from a TOML file\n",
+    "        generally loaded from a TOML file\n",
     "    site : str\n",
     "        'Pole' or 'Chile', case doesn't matter\n",
     "    channel : str\n",
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
     "    telescope_years = 0\n",
-    "    for tube, bands in config_telescopes[get_telescope(channel)].items():\n",
+    "    for tube, bands in config[\"telescopes\"][get_telescope(channel)].items():\n",
     "        if bands[\"site\"].lower() == site.lower():\n",
     "            has_band = bands.get(channel[:-1], 0) > 0\n",
     "            telescope_years += has_band * bands.get(\n",
