fix: separated imports

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -30,15 +30,22 @@
    "source": [
     "# export\n",
     "\n",
-    "import logging as log\n",
-    "\n",
-    "import toml\n",
     "import healpy as hp\n",
     "import numpy as np\n",
-    "import h5py\n",
     "from path import Path\n",
+    "import logging as log\n",
     "\n",
     "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import toml"
    ]
   },
   {
