fix: bugfixes in the library exports

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -60,6 +60,7 @@
    "source": [
     "#export\n",
     "\n",
+    "\n",
     "def get_telescope(channel):\n",
     "    \"\"\"Identify if a channel is in SAT or LAT\n",
     "\n",
@@ -85,11 +86,13 @@
     "# export\n",
     "\n",
     "import h5py\n",
-    "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')\n",
+    "\n",
+    "s4 = h5py.File(\"cmbs4_tophat.h5\", \"r\")\n",
+    "\n",
     "\n",
     "def parse_channels(channels):\n",
     "    if channels in [\"SAT\", \"LAT\"]:\n",
-    "        channels = [ch for ch in s4.keys() if s4[ch].attrs[\"telescope\"]==channels]\n",
+    "        channels = [ch for ch in s4.keys() if s4[ch].attrs[\"telescope\"] == channels]\n",
     "    elif channels in [\"all\", None]:\n",
     "        channels = s4.keys()\n",
     "    return [channels] if isinstance(channels, str) else list(channels)"
