--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -26,14 +26,13 @@
    "source": [
     "# export\n",
     "\n",
-    "import toml\n",
     "import healpy as hp\n",
     "import numpy as np\n",
     "\n",
     "from path import Path\n",
     "import logging as log\n",
     "\n",
-    "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
+    "from s4refsimtool.core import get_telescope, base_folder"
    ]
   },
   {
@@ -99,7 +98,12 @@
    "source": [
     "# export\n",
     "\n",
-    "emission_naming = dict( foreground_emission = \"foreground\", CMB_unlensed = \"cmb-unlensed\", CMB_lensing_signal = \"cmb-lensing\",CMB_tensor_to_scalar_ratio = \"cmb-tensors\",)"
+    "emission_naming = dict(\n",
+    "    foreground_emission=\"foreground\",\n",
+    "    CMB_unlensed=\"cmb-unlensed\",\n",
+    "    CMB_lensing_signal=\"cmb-lensing\",\n",
+    "    CMB_tensor_to_scalar_ratio=\"cmb-tensors\",\n",
+    ")"
    ]
   },
   {
@@ -152,7 +156,7 @@
     "        emission_map = hp.read_map(\n",
     "            Path(base_folder)\n",
     "            / f\"{realization:08d}\"\n",
-    "            / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{ch}_filtered_telescope_all_time_all_bmap.fits\",\n",
+    "            / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
     "            (0, 1, 2),\n",
     "            verbose=False,\n",
     "        )\n",
