--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -39,11 +39,10 @@
    "source": [
     "# export\n",
     "\n",
-    "import toml\n",
     "import healpy as hp\n",
     "import numpy as np\n",
-    "import h5py\n",
     "from path import Path\n",
+    "import logging as log\n",
     "\n",
     "from s4refsimtool.core import get_telescope, base_folder, simulations_observing_efficiency"
    ]
@@ -135,19 +134,19 @@
     "# exports\n",
     "\n",
     "\n",
-    "def get_tube_years(config_telescopes, site, channel):\n",
+    "def get_tube_years(config, site, channel):\n",
     "    \"\"\"Compute the number of tube/years in the CMB-S4 configuration\n",
     "\n",
     "    config_telescopes : dict\n",
     "        CMB-S4 telescopes configuration,\n",
-    "        generally config[\"telescopes\"] if loaded from a TOML file\n",
+    "        generally loaded from a TOML file\n",
     "    site : str\n",
     "        'Pole' or 'Chile', case doesn't matter\n",
     "    channel : str\n",
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
     "    tube_years = 0\n",
-    "    for tube, bands in config_telescopes[get_telescope(channel)].items():\n",
+    "    for tube, bands in config[\"telescopes\"][get_telescope(channel)].items():\n",
     "        if bands[\"site\"].lower() == site.lower():\n",
     "            num_tubes = bands.get(channel[:-1], 0)\n",
     "            tube_years += num_tubes * bands.get(\n",
@@ -234,16 +233,13 @@
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
-    "    nside = 512 if telescope == \"SAT\" else 4096\n",
-    "    npix = hp.nside2npix(nside)\n",
-    "    output_map = hp.read_map(\n",
+    "    map_filename = (\n",
     "        Path(base_folder)\n",
     "        / f\"{realization:08d}\"\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
-    "        (0, 1, 2),\n",
-    "        dtype=np.float32,\n",
-    "        verbose=False,\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
     "    )\n",
+    "    log.info(f\"Reading {map_filename}\")\n",
+    "    output_map = hp.read_map(map_filename, (0, 1, 2), dtype=np.float32, verbose=False)\n",
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    output_map *= 10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
