--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -176,14 +176,16 @@
     "    output_map : numpy array\n",
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
+    "\n",
     "    telescope = get_telescope(channel)\n",
-    "    atmosphere_map = hp.read_map(\n",
+    "    map_filename = (\n",
     "        Path(base_folder)\n",
     "        / f\"{realization:08d}\"\n",
-    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
-    "        (0, 1, 2),\n",
-    "        dtype=np.float32,\n",
-    "        verbose=False,\n",
+    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    "    )\n",
+    "    log.info(f\"Reading {map_filename}\")\n",
+    "    atmosphere_map = hp.read_map(\n",
+    "        map_filename, (0, 1, 2), dtype=np.float32, verbose=False\n",
     "    )\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
