fix: the handling of the config subsection was broken

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -179,13 +179,12 @@
     "\n",
     "    telescope = get_telescope(channel)\n",
     "    map_filename = (\n",
-    "        Path(base_folder)\n",
-    "        / f\"{realization:08d}\"\n",
+    "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
     "    )\n",
     "    log.info(f\"Reading {map_filename}\")\n",
     "    atmosphere_map = hp.read_map(\n",
-    "        map_filename, (0, 1, 2), dtype=np.float32, verbose=False\n",
+    "        Path(base_folder) / map_filename, (0, 1, 2), dtype=np.float32, verbose=False\n",
     "    )\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
@@ -196,7 +195,7 @@
     "    atmosphere_map *= np.sqrt(\n",
     "        simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
     "    )\n",
-    "    atmosphere_map /= np.sqrt(get_telecope_years(config[\"telescopes\"], site, channel))\n",
+    "    atmosphere_map /= np.sqrt(get_telecope_years(config, site, channel))\n",
     "    return atmosphere_map"
    ]
   },
