--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -234,16 +234,17 @@
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
     "    map_filename = (\n",
-    "        Path(base_folder)\n",
-    "        / f\"{realization:08d}\"\n",
+    "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
     "    )\n",
     "    log.info(f\"Reading {map_filename}\")\n",
-    "    output_map = hp.read_map(map_filename, (0, 1, 2), dtype=np.float32, verbose=False)\n",
+    "    output_map = hp.read_map(\n",
+    "        Path(base_folder) / map_filename, (0, 1, 2), dtype=np.float32, verbose=False\n",
+    "    )\n",
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    output_map *= 10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
-    "    output_map *= get_tube_years(config[\"telescopes\"], site, channel)\n",
+    "    output_map *= get_tube_years(config, site, channel)\n",
     "    # pole sims have lower efficiency\n",
     "    output_map *= np.sqrt(\n",
     "        simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
