--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "for site in [\"Pole\", \"Chile\"]:\n",
     "    for channel in s4.keys():\n",
-    "        telescope_years = get_telecope_years(config[\"telescopes\"], site, channel)\n",
+    "        telescope_years = get_telecope_years(config, site, channel)\n",
     "        print(site, channel, telescope_years)\n",
     "        telescope = get_telescope(channel)\n",
     "        if site == \"Chile\":\n",
