--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -113,24 +113,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = toml.load(\"s4_reference_design.toml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log.basicConfig(level=log.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# exports\n",
     "\n",
     "\n",
@@ -179,9 +161,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "config = toml.load(\"s4_reference_design.toml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log.basicConfig(level=log.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for site in [\"Pole\", \"Chile\"]:\n",
     "    for channel in s4.keys():\n",
-    "        tube_years = get_tube_years(config[\"telescopes\"], site, channel)\n",
+    "        tube_years = get_tube_years(config, site, channel)\n",
     "        print(site, channel, tube_years)\n",
     "        telescope = get_telescope(channel)\n",
     "        if site == \"Chile\":\n",
