feat: support comma separated list of channels

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -94,8 +94,10 @@
     "    if channels in [\"SAT\", \"LAT\"]:\n",
     "        channels = [ch for ch in s4.keys() if s4[ch].attrs[\"telescope\"] == channels]\n",
     "    elif channels in [\"all\", None]:\n",
-    "        channels = s4.keys()\n",
-    "    return [channels] if isinstance(channels, str) else list(channels)"
+    "        channels = list(s4.keys())\n",
+    "    elif isinstance(channels, str):\n",
+    "        channels = channels.split(\",\")\n",
+    "    return channels"
    ]
   },
   {
@@ -106,6 +108,7 @@
    "source": [
     "assert parse_channels(\"LFL1\") == [\"LFL1\"]\n",
     "assert parse_channels([\"LFL1\"]) == [\"LFL1\"]\n",
+    "assert parse_channels(\"LFL1,LFL2\") == [\"LFL1\", \"LFL2\"]\n",
     "assert parse_channels(\"LAT\") == ['HFL1', 'HFL2', 'LFL1', 'LFL2', 'MFL1', 'MFL2', 'ULFL1']\n",
     "assert parse_channels(\"all\") == list(s4.keys())"
    ]
