fix: fix notebook imports again

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.nanmax(output_map)"
+    "np.nanmin(output_map), np.nanmax(output_map)"
    ]
   },
   {
