--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -143,6 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import h5py\n",
+    "\n",
     "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')"
    ]
   },
@@ -161,6 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import toml\n",
+    "\n",
     "config = toml.load(\"s4_reference_design.toml\")"
    ]
   },
