--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -11,7 +11,6 @@
     "\n",
     "* parses the configuration file\n",
     "* gets the channels that the user wants to simulate\n",
-    "* and the number of splits\n",
     "* loops through these and returns/writes the maps"
    ]
   },
@@ -46,8 +45,9 @@
     "import healpy as hp\n",
     "import numpy as np\n",
     "import h5py\n",
-    "from path import Path\n",
+    "from pathlib import Path\n",
     "import logging as log\n",
+    "from datetime import date\n",
     "\n",
     "from s4refsimtool.core import get_telescope, parse_channels\n",
     "\n",
