--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -41,61 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = toml.load(\"s4_reference_design.toml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ch = \"LFS1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for each in s4.keys():\n",
-    "    print(each, s4[each].attrs[\"center_frequency_GHz\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log.basicConfig(level=log.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# export\n",
     "\n",
     "emission_naming = dict(\n",
@@ -175,10 +120,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import toml\n",
+    "\n",
+    "config = toml.load(\"s4_reference_design.toml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "\n",
+    "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for each in s4.keys():\n",
+    "    print(each, s4[each].attrs[\"center_frequency_GHz\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log.basicConfig(level=log.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## inputs\n",
     "\n",
     "ch = \"LFS1\"\n",
-    "site = \"Chile\""
+    "site = \"Pole\""
    ]
   },
   {
@@ -206,7 +192,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmax(output_map) > 1e-3 and np.nanmax(output_map) < .1, \"Rough unit check\""
+    "np.nanmin(output_map), np.nanmax(output_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert np.nanmax(output_map) > 1e-4 and np.nanmax(output_map) < 1e-3, \"Rough unit check\""
    ]
   },
   {
@@ -224,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[0], min=-1e-2, max=1e-2, unit=\"K\", title=\"Foregrounds I\")"
+    "hp.mollview(output_map[0], min=-1e-4, max=1e-4, unit=\"K\", title=\"Foregrounds I\")"
    ]
   },
   {
@@ -233,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[1], min=-1e-4, max=1e-4, unit=\"K\", title=\"Foregrounds Q\")"
+    "hp.mollview(output_map[1], min=-1e-5, max=1e-5, unit=\"K\", title=\"Foregrounds Q\")"
    ]
   },
   {
@@ -242,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[2], min=-1e-4, max=1e-4, unit=\"K\", title=\"Foregrounds U\")"
+    "hp.mollview(output_map[2], min=-1e-5, max=1e-5, unit=\"K\", title=\"Foregrounds U\")"
    ]
   },
   {
