feat: implemented md5 checksum

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -64,6 +64,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hashlib\n",
+    "\n",
+    "def md5sum(filename):\n",
+    "    \"\"\"Compute md5 checksum of the contents of a file\"\"\"\n",
+    "    return hashlib.md5(open(filename,'rb').read()).hexdigest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "console_md5sum = !md5sum s4_reference_design.toml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert md5sum(\"s4_reference_design.toml\") == console_md5sum[0].split()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# exports\n",
     "\n",
     "\n",
